<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:layout_gravity="center_horizontal">

    <WebView
        android:id="@+id/webView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintTop_toBottomOf="@id/buttonLoad"
        app:layout_constraintBottom_toTopOf="@id/textViewInfoGrupo"
        android:layout_marginBottom="50dp"
        android:layout_marginTop="50dp"
        android:visibility="invisible"
        />
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/instructions_mkarcade_android"
        app:layout_constraintTop_toBottomOf="@id/buttonLoad"
        />
    <Button
        android:id="@+id/buttonLoad"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/button_load"
        app:layout_constraintStart_toEndOf="@id/editTextIdGame"
        app:layout_constraintBottom_toTopOf="@id/webView"
        />

    <EditText
        android:id="@+id/editTextIdGame"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginStart="64dp"
        android:ems="10"
        android:hint="@string/id_juego"
        android:inputType="text"
        app:layout_constraintEnd_toStartOf="@id/buttonLoad"
        app:layout_constraintBottom_toTopOf="@id/webView"
        android:autofillHints="1" />
    <TextView
        android:id="@+id/textViewInfoGrupo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:text="@string/grupo_de_trabajo_makecode_arcade_valencia"
        app:layout_constraintTop_toBottomOf="@id/webView"
        />

</androidx.constraintlayout.widget.ConstraintLayout>